[package]
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
description = "An entropy-based password strength estimator, originally for Javascript by Dropbox."
documentation = "https://docs.rs/zxcvbn"
homepage = "https://github.com/shssoichiro/zxcvbn-rs"
license = "MIT"
name = "zxcvbn"
repository = "https://github.com/shssoichiro/zxcvbn-rs"
version = "2.2.1"
edition = "2021"

[badges]
travis-ci = { repository = "shssoichiro/zxcvbn-rs", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
derive_builder = { version = "0.12.0", optional = true }
fancy-regex = "0.11.0"
itertools = "0.10.0"
lazy_static = "1.3"
quick-error = "2.0"
regex = "1"
time = { version = "0.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.56"

[dependencies.serde]
optional = true
version = "1"

[dependencies.serde_derive]
optional = true
version = "1"

[dev-dependencies]
quickcheck = "1.0.0"
serde_json = "1"
criterion = "0.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["builder"]
ser = ["serde", "serde_derive"]
builder = ["derive_builder"]

[profile.test]
opt-level = 2

[[bench]]
name = "zxcvbn"
harness = false

[[bench]]
name = "zxcvbn_unicode"
harness = false
