[package]
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
description = "An entropy-based password strength estimator, originally for Javascript by Dropbox."
documentation = "https://docs.rs/zxcvbn"
homepage = "https://github.com/shssoichiro/zxcvbn-rs"
license = "MIT"
name = "zxcvbn"
repository = "https://github.com/shssoichiro/zxcvbn-rs"
version = "3.0.1"
edition = "2021"
rust-version = "1.63"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
derive_builder = { version = "0.20", optional = true }
fancy-regex = "0.13"
itertools = "0.13"
lazy_static = "1.3"
regex = "1"
time = { version = "0.3" }
chrono = "0.4"

[target.'cfg(all(target_arch = "wasm32", not(feature = "non-js")))'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Performance"] }

[dependencies.serde]
optional = true
version = "1"
features = ["derive"]

[dev-dependencies]
quickcheck = "1.0.0"
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"
serde_json = "1"

[target.'cfg(all(target_arch = "wasm32", not(feature = "non-js")))'.dev-dependencies]
criterion = { version = "0.5", default-features = false }
wasm-bindgen-test = "0.3"

[features]
default = ["builder"]
ser = ["serde"]
builder = ["derive_builder"]
non-js = []

[profile.test]
opt-level = 2

[[bench]]
name = "zxcvbn"
harness = false

[[bench]]
name = "zxcvbn_unicode"
harness = false
